--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 .grid {
-  width:200px;
-  height: 400px;
-  background-color: yellow;
+  width:300px;
+  height: 600px;
+  background-color: whitesmoke;
   display: flex;
   flex-wrap: wrap;
 }
 
 .grid div{
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
   background-color: none;
 }
 
@@ -17,25 +17,81 @@
 }
 
 .mini-grid {
-  width:80px;
-  height: 80px;
+  width:120px;
+  height: 120px;
   display: flex;
   flex-wrap: wrap;
-  background-color: yellow;
+  background-color: whitesmoke;
   margin-left:20px;
+
 }
 
 .mini-grid div {
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
 }
 
 .container {
   display: flex;
-  margin: 0 20px;
+  margin-top: 20px;
+  height: 50%;
+  flex: 1;
+  background-color: rgba(0, 0, 0, 0.37);
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  position: relative;
 }
 
 body {
-  width: 100%;
-  height: 100vh;
+  width: 95vw;
+  height: 95vh;
+  background-image: url(bg.jpg);
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header {
+  background-color: rgba(0, 0, 0, 0.37);
+  color: aliceblue;
+  height: 20%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 70%;
+}
+
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+.buttons button {
+  text-decoration: none;
+  font-size: 2rem;
+  margin-top: 10px;
+  background-color: pink;
+  border-radius: 1rem;
+  border: none;
+}
+
+.buttons select {
+  margin-top: 10px;
+  text-decoration: none;
+  font-size: 2rem;
+  margin-top: 10px;
+  background-color: pink;
+  border-radius: 1rem;
+  border: none;
+  
+}
+
+.header p {
+  margin: 0;
+  font-size: 3.5rem;
 }
